live data_analysis

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,285 +1,7 @@
-absl-py @ file:///home/conda/feedstock_root/build_artifacts/absl-py_1705494584803/work
-aiohttp @ file:///home/conda/feedstock_root/build_artifacts/aiohttp_1713964817363/work
-aiosignal @ file:///tmp/build/80754af9/aiosignal_1637843061372/work
-alabaster @ file:///home/conda/feedstock_root/build_artifacts/alabaster_1704848697227/work
+absl-py
+aiohttp
+aiosignal
+alabaster
 altair==5.3.0
 annotated-types==0.7.0
-astroid @ file:///home/conda/feedstock_root/build_artifacts/astroid_1716193689737/work
-asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1698341106958/work
-astunparse==1.6.3
-async-timeout @ file:///home/conda/feedstock_root/build_artifacts/async-timeout_1691763562544/work
-attrs @ file:///home/conda/feedstock_root/build_artifacts/attrs_1704011227531/work
-Babel @ file:///home/conda/feedstock_root/build_artifacts/babel_1702422572539/work
-backcall==0.2.0
-base58==1.0.3
-beautifulsoup4==4.12.3
-bitarray==3.0.0
-black @ file:///home/conda/feedstock_root/build_artifacts/black-recipe_1714119609194/work
-bleach==6.1.0
-blinker @ file:///home/conda/feedstock_root/build_artifacts/blinker_1715091184126/work
-Bottleneck @ file:///home/conda/feedstock_root/build_artifacts/bottleneck_1719274995790/work
-Brotli @ file:///home/conda/feedstock_root/build_artifacts/brotli-split_1666788425425/work
-cached-property @ file:///home/conda/feedstock_root/build_artifacts/cached_property_1615209429212/work
-cachetools @ file:///home/conda/feedstock_root/build_artifacts/cachetools_1708987703938/work
-cchecksum==0.0.3
-certifi @ file:///home/conda/feedstock_root/build_artifacts/certifi_1720457958366/work/certifi
-cffi @ file:///home/conda/feedstock_root/build_artifacts/cffi_1696001742886/work
-charset-normalizer @ file:///tmp/build/80754af9/charset-normalizer_1630003229654/work
-ckzg==2.0.1
-clarabel==0.9.0
-click @ file:///home/conda/feedstock_root/build_artifacts/click_1692311806742/work
-colorama @ file:///home/conda/feedstock_root/build_artifacts/colorama_1666700638685/work
-comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1710320294760/work
-contourpy @ file:///home/conda/feedstock_root/build_artifacts/contourpy_1712429891065/work
-cryptography @ file:///home/conda/feedstock_root/build_artifacts/cryptography-split_1706658593956/work
-cubinlinker @ file:///home/conda/feedstock_root/build_artifacts/cubinlinker_1701346021956/work
-cuda-python @ file:///opt/conda/conda-bld/cuda-python_1697577638473/work
-cudf==23.6.1
-cupy @ file:///home/conda/feedstock_root/build_artifacts/cupy-split_1718373218565/work
-cvxpy==1.5.2
-cycler @ file:///tmp/build/80754af9/cycler_1637851556182/work
-cytoolz==1.0.0
-dataclassy==0.11.1
-dateparser==1.2.0
-debugpy @ file:///home/conda/feedstock_root/build_artifacts/debugpy_1719378673901/work
-decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1641555617451/work
-defusedxml==0.7.1
-dill @ file:///home/conda/feedstock_root/build_artifacts/dill_1706434688412/work
-docopt==0.6.2
-docutils @ file:///home/conda/feedstock_root/build_artifacts/docutils_1701882589100/work
-ecos==2.0.14
-eip712==0.2.10
-eth-account==0.13.4
-eth-ape==0.8.22
-eth-bloom==3.0.1
-eth-hash==0.7.0
-eth-keyfile==0.8.1
-eth-keys==0.6.0
-eth-pydantic-types==0.1.3
-eth-rlp==2.1.0
-eth-tester==0.12.0b2
-eth-typing==5.0.1
-eth-utils==5.1.0
-eth_abi==5.1.0
-ethpm-types==0.6.19
-eval_type_backport==0.2.0
-evm-trace==0.2.4
-evmchains==0.1.3
-exceptiongroup @ file:///home/conda/feedstock_root/build_artifacts/exceptiongroup_1720869315914/work
-executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1698579936712/work
-fastjsonschema==2.20.0
-fastrlock @ file:///home/conda/feedstock_root/build_artifacts/fastrlock_1702696324937/work
-flatbuffers @ file:///home/ktietz/cip/python-flatbuffers_1634039120618/work
-fonttools @ file:///home/conda/feedstock_root/build_artifacts/fonttools_1717209186714/work
-fredapi==0.5.2
-frozendict==2.4.4
-frozenlist @ file:///home/conda/feedstock_root/build_artifacts/frozenlist_1702645466206/work
-fsspec @ file:///home/conda/feedstock_root/build_artifacts/fsspec_1719514913127/work
-gast @ file:///Users/ktietz/demo/mc3/conda-bld/gast_1628588903283/work
-gevent==24.2.1
-gitdb==4.0.11
-GitPython==3.1.43
-google-auth @ file:///home/conda/feedstock_root/build_artifacts/google-auth_1719906113316/work
-google-auth-oauthlib @ file:///home/conda/feedstock_root/build_artifacts/google-auth-oauthlib_1630497468950/work
-google-pasta @ file:///Users/ktietz/demo/mc3/conda-bld/google-pasta_1630577991354/work
-greenlet==3.0.3
-grpcio @ file:///home/conda/feedstock_root/build_artifacts/grpc-split_1675289302417/work
-h2 @ file:///home/conda/feedstock_root/build_artifacts/h2_1634280454336/work
-h5py @ file:///home/conda/feedstock_root/build_artifacts/h5py_1696885413992/work
-HawkesPyLib==0.2.2
-hexbytes==1.2.1
-hmmlearn==0.3.2
-hpack==4.0.0
-html5lib==1.1
-hyperframe @ file:///home/conda/feedstock_root/build_artifacts/hyperframe_1619110129307/work
-hyperliquid-python-sdk @ file:///home/jvs/hyperliquid-python-sdk
-idna @ file:///home/conda/feedstock_root/build_artifacts/idna_1713279365350/work
-ijson==3.3.0
-imagesize @ file:///home/conda/feedstock_root/build_artifacts/imagesize_1656939531508/work
-importlib_metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1719361860083/work
-importlib_resources @ file:///home/conda/feedstock_root/build_artifacts/importlib_resources_1711040877059/work
-iniconfig==2.0.0
-ipykernel @ file:///home/conda/feedstock_root/build_artifacts/ipykernel_1719845459717/work
-ipython @ file:///home/conda/feedstock_root/build_artifacts/ipython_1701831663892/work
-isort @ file:///home/conda/feedstock_root/build_artifacts/isort_1702518492027/work
-jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1696326070614/work
-Jinja2 @ file:///home/conda/feedstock_root/build_artifacts/jinja2_1715127149914/work
-joblib @ file:///home/conda/feedstock_root/build_artifacts/joblib_1714665484399/work
-jsonschema==4.23.0
-jsonschema-specifications==2023.12.1
-jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1716472197302/work
-jupyter_core @ file:///home/conda/feedstock_root/build_artifacts/jupyter_core_1710257447442/work
-jupyterlab_pygments==0.3.0
-keras @ file:///home/conda/feedstock_root/build_artifacts/keras_1669020828024/work/keras-2.11.0-py2.py3-none-any.whl
-Keras-Preprocessing @ file:///tmp/build/80754af9/keras-preprocessing_1612283640596/work
-kiwisolver @ file:///home/conda/feedstock_root/build_artifacts/kiwisolver_1695379916629/work
-lazyasd==0.1.4
-llvmlite==0.42.0
-lru-dict==1.3.0
-lxml==5.2.2
-Markdown @ file:///home/conda/feedstock_root/build_artifacts/markdown_1710435156458/work
-markdown-it-py==3.0.0
-MarkupSafe @ file:///home/conda/feedstock_root/build_artifacts/markupsafe_1706899945820/work
-matplotlib @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-suite_1715976210960/work
-matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1713250518406/work
-mccabe @ file:///opt/conda/conda-bld/mccabe_1644221741721/work
-mdurl==0.1.2
-mistune==3.0.2
-mkl-fft==1.3.1
-mkl-random==1.2.2
-mkl-service==2.4.0
-morphys==1.0
-msgpack==1.1.0
-msgspec==0.18.6
-multidict @ file:///home/conda/feedstock_root/build_artifacts/multidict_1707040720863/work
-multitasking==0.0.11
-munkres==1.1.4
-mypy-extensions @ file:///home/conda/feedstock_root/build_artifacts/mypy_extensions_1675543315189/work
-nbclient==0.10.0
-nbconvert==7.16.4
-nbformat==5.10.4
-nest_asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1705850609492/work
-numba @ file:///home/conda/feedstock_root/build_artifacts/numba_1711475177475/work
-numexpr @ file:///home/conda/feedstock_root/build_artifacts/numexpr_1716812153714/work
-numpy @ file:///croot/numpy_and_numpy_base_1708638617955/work/dist/numpy-1.26.4-cp39-cp39-linux_x86_64.whl#sha256=b69ac3eb7538c5a224df429dc49031914fb977825ee007f2c77a13f7aa6cd769
-nvtx @ file:///home/conda/feedstock_root/build_artifacts/nvtx_1708093814275/work
-oauthlib @ file:///home/conda/feedstock_root/build_artifacts/oauthlib_1666056362788/work
-odfpy==1.4.1
-opt-einsum @ file:///tmp/build/80754af9/opt_einsum_1621500238896/work
-osqp==0.6.7.post1
-packaging==23.2
-pandas==2.2.3
-pandocfilters==1.5.1
-parsimonious==0.10.0
-parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1712320355065/work
-pathspec @ file:///home/conda/feedstock_root/build_artifacts/pathspec_1702249949303/work
-patsy==0.5.6
-peewee==3.17.6
-pexpect @ file:///home/conda/feedstock_root/build_artifacts/pexpect_1706113125309/work
-pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1602536217715/work
-pillow @ file:///croot/pillow_1714398848491/work
-pipreqs==0.5.0
-platformdirs @ file:///home/conda/feedstock_root/build_artifacts/platformdirs_1715777629804/work
-plotly==5.22.0
-pluggy==1.5.0
-ply @ file:///home/conda/feedstock_root/build_artifacts/ply_1712242996588/work
-pooch @ file:///home/conda/feedstock_root/build_artifacts/pooch_1717777836653/work
-prettytable==3.10.2
-prompt_toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1718047967974/work
-protobuf==4.21.12
-psutil @ file:///home/conda/feedstock_root/build_artifacts/psutil_1719274564771/work
-ptxcompiler @ file:///home/conda/feedstock_root/build_artifacts/ptxcompiler_1697578520854/work
-ptyprocess @ file:///home/conda/feedstock_root/build_artifacts/ptyprocess_1609419310487/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
-pure-eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1642875951954/work
-py-cid==0.3.0
-py-ecc==7.0.1
-py-evm==0.10.1b2
-py-geth==5.1.0
-py-multibase==1.0.3
-py-multicodec==0.2.1
-py-multihash==0.2.3
-pyarrow==11.0.0
-pyasn1 @ file:///Users/ktietz/demo/mc3/conda-bld/pyasn1_1629708007385/work
-pyasn1-modules==0.2.8
-pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
-pycryptodome==3.20.0
-pydantic==2.10.3
-pydantic-settings==2.6.1
-pydantic_core==2.27.1
-pydeck==0.9.1
-Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1714846767233/work
-PyJWT @ file:///home/conda/feedstock_root/build_artifacts/pyjwt_1706895065046/work
-pykalman==0.9.7
-pylint @ file:///home/conda/feedstock_root/build_artifacts/pylint_1719612995924/work
-pyOpenSSL @ file:///home/conda/feedstock_root/build_artifacts/pyopenssl_1706660063483/work
-pyparsing @ file:///home/conda/feedstock_root/build_artifacts/pyparsing_1709721012883/work
-pyportfolioopt==1.5.5
-PyQt5==5.15.9
-PyQt5-sip==12.12.2
-PySocks @ file:///home/conda/feedstock_root/build_artifacts/pysocks_1661604839144/work
-pytest==8.3.4
-python-baseconv==1.2.2
-python-binance==1.0.19
-python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1709299778482/work
-python-dotenv==1.0.1
-pytz @ file:///home/conda/feedstock_root/build_artifacts/pytz_1706886791323/work
-pyu2f @ file:///home/conda/feedstock_root/build_artifacts/pyu2f_1604248910016/work
-pyunormalize==16.0.0
-PyYAML==6.0.2
-pyzmq @ file:///home/conda/feedstock_root/build_artifacts/pyzmq_1715024408309/work
-qdldl==0.1.7.post4
-referencing==0.35.1
-regex==2024.5.15
-requests @ file:///home/conda/feedstock_root/build_artifacts/requests_1717057054362/work
-requests-oauthlib==1.3.0
-rich==13.7.1
-rlp==4.0.1
-rmm==23.6.0
-rpds-py==0.19.0
-rsa @ file:///tmp/build/80754af9/rsa_1614366226499/work
-safe-pysha3==1.0.4
-scikit-learn @ file:///home/conda/feedstock_root/build_artifacts/scikit-learn_1719998091481/work/dist/scikit_learn-1.5.1-cp39-cp39-linux_x86_64.whl#sha256=74d27d0bc0b9c7de5c8dd9753f4472286e8697aedd6c0c4b476fa79d80f3cb64
-scipy @ file:///home/conda/feedstock_root/build_artifacts/scipy-split_1716470218293/work/dist/scipy-1.13.1-cp39-cp39-linux_x86_64.whl#sha256=e6696cb8683d94467891b7648e068a3970f6bc0a1b3c1aa7f9bc89458eafd2f0
-scs==3.2.6
-seaborn==0.13.2
-semantic-version==2.10.0
-sip @ file:///home/conda/feedstock_root/build_artifacts/sip_1697300422453/work
-six @ file:///tmp/build/80754af9/six_1644875935023/work
-smmap==5.0.1
-snowballstemmer @ file:///tmp/build/80754af9/snowballstemmer_1637937080595/work
-sortedcontainers==2.4.0
-soupsieve==2.5
-Sphinx @ file:///home/conda/feedstock_root/build_artifacts/sphinx_1713554891974/work
-sphinx-rtd-theme @ file:///home/conda/feedstock_root/build_artifacts/sphinx_rtd_theme_1701183475238/work
-sphinxcontrib-applehelp @ file:///home/ktietz/src/ci/sphinxcontrib-applehelp_1611920841464/work
-sphinxcontrib-devhelp @ file:///home/ktietz/src/ci/sphinxcontrib-devhelp_1611920923094/work
-sphinxcontrib-htmlhelp @ file:///tmp/build/80754af9/sphinxcontrib-htmlhelp_1623945626792/work
-sphinxcontrib-jquery @ file:///home/conda/feedstock_root/build_artifacts/sphinxcontrib-jquery_1678808969227/work
-sphinxcontrib-jsmath @ file:///home/ktietz/src/ci/sphinxcontrib-jsmath_1611920942228/work
-sphinxcontrib-qthelp @ file:///home/ktietz/src/ci/sphinxcontrib-qthelp_1611921055322/work
-sphinxcontrib-serializinghtml @ file:///home/conda/feedstock_root/build_artifacts/sphinxcontrib-serializinghtml_1705118225549/work
-SQLAlchemy==2.0.36
-stack-data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1669632077133/work
-statsmodels==0.14.2
-streamlit==1.36.0
-tabulate==0.9.0
-tenacity==8.5.0
-tensorboard @ file:///home/conda/feedstock_root/build_artifacts/tensorboard_1673674224265/work/tensorboard-2.11.2-py3-none-any.whl
-tensorboard-data-server @ file:///home/conda/feedstock_root/build_artifacts/tensorboard-data-server_1670043784580/work/tensorboard_data_server-0.6.1-py3-none-manylinux2010_x86_64.whl
-tensorboard-plugin-wit @ file:///home/conda/feedstock_root/build_artifacts/tensorboard-plugin-wit_1641458951060/work/tensorboard_plugin_wit-1.8.1-py3-none-any.whl
-tensorflow @ file:///home/conda/feedstock_root/build_artifacts/tensorflow-split_1671089268329/work/tensorflow_pkg/tensorflow-2.11.0-cp39-cp39-linux_x86_64.whl
-tensorflow-estimator @ file:///home/conda/feedstock_root/build_artifacts/tensorflow-split_1671089268329/work/tensorflow-estimator/wheel_dir/tensorflow_estimator-2.11.0-py2.py3-none-any.whl
-termcolor @ file:///home/conda/feedstock_root/build_artifacts/termcolor_1704357939450/work
-threadpoolctl @ file:///home/conda/feedstock_root/build_artifacts/threadpoolctl_1714400101435/work
-tinycss2==1.3.0
-toml @ file:///home/conda/feedstock_root/build_artifacts/toml_1604308577558/work
-tomli @ file:///home/conda/feedstock_root/build_artifacts/tomli_1644342247877/work
-tomlkit @ file:///home/conda/feedstock_root/build_artifacts/tomlkit_1715185399719/work
-toolz==0.12.1
-tornado @ file:///home/conda/feedstock_root/build_artifacts/tornado_1717722887379/work
-tqdm==4.67.1
-traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1713535121073/work
-trie==3.0.1
-types-requests==2.32.0.20241016
-typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1717802530399/work
-tzdata @ file:///croot/python-tzdata_1690578112552/work
-tzlocal==5.2
-ujson==5.10.0
-unicodedata2 @ file:///home/conda/feedstock_root/build_artifacts/unicodedata2_1695847984941/work
-urllib3 @ file:///home/conda/feedstock_root/build_artifacts/urllib3_1719391292974/work
-varint==1.0.2
-watchdog==3.0.0
-wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1704731205417/work
-web3==7.6.0
-webencodings==0.5.1
-websocket-client==1.8.0
-websockets==12.0
-Werkzeug @ file:///home/conda/feedstock_root/build_artifacts/werkzeug_1715000201436/work
-wrapt @ file:///home/conda/feedstock_root/build_artifacts/wrapt_1699532794105/work
-yarg==0.1.9
-yarl @ file:///home/conda/feedstock_root/build_artifacts/yarl_1705508299377/work
-yfinance==0.2.41
-zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1718013267051/work
-zope.event==5.0
-zope.interface==6.4.post2
-zstandard==0.22.0
+astroid
