--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,110 @@
-absl-py
-aiohttp
-aiosignal
-alabaster
+absl-py==2.2.2
+aiodns==3.2.0
+aiohappyeyeballs==2.4.6
+aiohttp==3.10.11
+aiosignal==1.3.2
+alabaster==0.7.16
 altair==5.3.0
 annotated-types==0.7.0
-astroid
+anyio==4.8.0
+astroid==3.3.10
+async-timeout==5.0.1
+attrs==25.1.0
+Automat==24.8.1
+backports.tarfile==1.2.0
+backtrader==1.9.78.123
+beautifulsoup4==4.13.4
+brotli==1.0.9
+candlelite==1.0.17
+ccxt==4.4.61
+certifi==2023.5.7
+cffi==1.17.1
+charset-normalizer==3.4.1
+constantly==23.10.4
+contourpy==1.3.0
+cryptography==44.0.1
+curl_cffi==0.11.1
+cycler==0.12.1
+et-xmlfile==1.1.0
+exceptiongroup==1.2.2
+fonttools==4.58.0
+frozendict==2.4.6
+frozenlist==1.5.0
+gevent==24.11.1
+greenlet==3.1.1
+h11==0.14.0
+h2==4.2.0
+hmmlearn==0.3.3
+hpack==4.1.0
+httpcore==1.0.7
+httpx==0.28.1
+hyperframe==6.1.0
+hyperlink==21.0.0
+idna==3.10
+importlib_metadata==8.6.1
+importlib_resources==6.5.2
+incremental==24.7.2
+jaraco.classes==3.4.0
+jaraco.context==6.0.1
+jaraco.functools==4.1.0
+Jinja2==3.1.6
+joblib==1.5.0
+jsonschema==4.23.0
+jsonschema-specifications==2025.4.1
+keyring==25.6.0
+kiwisolver==1.4.7
+loguru==0.7.3
+MarkupSafe==3.0.2
+matplotlib==3.9.4
+more-itertools==10.6.0
+multidict==6.1.0
+multitasking==0.0.11
+numpy==2.0.2
+okx==2.1.2
+openpyxl==3.1.2
+packaging==25.0
+pandas==2.2.3
+paux==1.0.14
+peewee==3.18.1
+pendulum==3.0.0
+pillow==11.2.1
+platformdirs==4.3.8
+propcache==0.2.1
+protobuf==6.31.0
+pybit==5.9.0
+pycares==4.5.0
+pycparser==2.22
+pycryptodome==3.21.0
+pyOpenSSL==25.0.0
+pyparsing==3.2.3
+PySocks==1.7.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-okx==0.3.5
+pytz==2025.1
+PyYAML==6.0.2
+redis==5.2.1
+referencing==0.36.2
+requests==2.31.0
+rpds-py==0.25.0
+ruptures==1.1.9
+scikit-learn==1.6.1
+scipy==1.13.1
+six==1.17.0
+sniffio==1.3.1
+soupsieve==2.7
+threadpoolctl==3.6.0
+time-machine==2.16.0
+tomli==2.2.1
+toolz==1.0.0
+Twisted==24.11.0
+typing_extensions==4.12.2
+tzdata==2025.1
+urllib3==1.26.12
+websocket-client==1.8.0
+websockets==15.0.1
+yarl==1.18.3
+yfinance==0.2.61
+zipp==3.21.0
+zope.event==5.0
+zope.interface==7.2
